[gd_scene load_steps=5 format=3 uid="uid://cjksq2k2yi2y5"]

[ext_resource type="Theme" uid="uid://bn7tf70nor1sb" path="res://gui_menu_theme.tres" id="1_1hetj"]
[ext_resource type="Script" path="res://scripts/help.gd" id="1_lu8qc"]
[ext_resource type="FontFile" uid="uid://ch34o33lt8ea4" path="res://Assets/Fonts/PixelOperator8.ttf" id="2_ciugm"]

[sub_resource type="LabelSettings" id="LabelSettings_2absf"]
line_spacing = 24.0
font = ExtResource("2_ciugm")
font_size = 48

[node name="Help" type="Node2D"]
process_mode = 3
script = ExtResource("1_lu8qc")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.0546541, 0.424435, 0.30323, 1)

[node name="BackButton" type="Button" parent="."]
offset_left = 71.0
offset_top = 55.0
offset_right = 451.0
offset_bottom = 203.0
size_flags_horizontal = 0
theme = ExtResource("1_1hetj")
text = "< BACK"

[node name="ExitButton" type="Button" parent="."]
offset_left = 689.0
offset_top = 861.0
offset_right = 1292.0
offset_bottom = 1009.0
size_flags_horizontal = 0
theme = ExtResource("1_1hetj")
text = "EXIT TO MENU"

[node name="TitleLabel" type="Label" parent="."]
offset_left = 653.0
offset_top = 232.0
offset_right = 1295.0
offset_bottom = 300.0
text = "HELP"
label_settings = SubResource("LabelSettings_2absf")
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
